SWC-6721 - Apply style to the paragraph to prevent it from setting the width. UI should now be dynamic but the search bar does not overflow

--- a/packages/synapse-react-client/src/style/components/entity_finder/_entity-finder.scss
+++ b/packages/synapse-react-client/src/style/components/entity_finder/_entity-finder.scss
@@ -48,12 +48,15 @@ $-splitter-width: 12px;
       width: 0;
     }
   }
-
   &__MainPanel {
     max-width: 100%;
     transition: width 0.25s linear;
     border: $-border-size solid SRC.$border-color-gray;
     height: $-finder-height + ($-border-size * 2);
+  }
+  &__MainPanel.MainPanelDualPane,
+  &__MainPanel.MainPanelSearch {
+    width: 85vw;
   }
 
   &__MainPanel.MainPanelSinglePane {
